Architecture/k8s/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: fidelia-api
  namespace: fidelia
  labels:
    app: fidelia-api
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: fidelia-api
